Problemas con diseño responsivo solucionado

--- a/html/about_us/landing.html
+++ b/html/about_us/landing.html
@@ -491,7 +491,7 @@
             <div class="t1_container4"></div>
         </div>
         <div class="triangle2">
-            <a href="#ethics.html"><div class="t2_container1"></div></a>
+            <a href="#ethics.html"><div class="t2_container1"><div class="t2_container11"></div></div></a>
         </div>
         <div class="triangle3">
             <div class="t3_container1"></div>
