Menú en visualización móvil
Aquí esta el botón que le faltaba a este menú

--- a/index.html
+++ b/index.html
@@ -808,7 +808,8 @@
                         <option value="#">  - PRESENTACIÓN DE LA AGENCIA</option>
 
 
-                    <option value="#projects2.html"> PROJECTS</option>
+                    <option value="#"> PROJECTS</option>
+                     	<option value="#projects.html">  - TODOS -</option>
 
                     <option value="#people.html"> PEOPLE</option>
 
