Cambio en el index
Hubo cambios dentro de algunos productos y tanto en el index para la
edición del menú

--- a/html/about_us/philosophy.html
+++ b/html/about_us/philosophy.html
@@ -507,7 +507,7 @@
 
             <div id="cohete1" class="v1"><img src="assets/media/philoshopy/cohete1.png" width="150" /><p  class="tooltip">Te sorprendo porque te ASOMBRO.</p></div>    
             <div id="cohete2" class="v2"><img src="assets/media/philoshopy/cohete2.png" width="150"/><p  class="tooltip2">Te sorprendo porque te INTERESO.</p></div>
-            <div id="cohete3" class="v3"><img src="assets/media/philoshopy/cohete3.png" width="150"/><p  class="tooltip4">Te sorprendo porque te ATRAPO.</p></div>
+            <div id="cohete3" class="v3"><img src="assets/media/philoshopy/cohete3.png" width="150"/><p  class="tooltip4">Te sorprendo porque te CONQUISTO.</p></div>
             <div id="cohete4" class="v4"><img src="assets/media/philoshopy/cohete4.png" width="100"/><p  class="tooltip3">Te sorprendo porque te ATRAPO.</p></div>
         </div>
 
