--- a/html/our_projects/amafore1.html
+++ b/html/our_projects/amafore1.html
@@ -741,10 +741,10 @@
 
                                         <div class="columns-preview-description">
 
-                                             <p style="color: #c42634; font-size:28px;">AMAFORE</p>
+                                             <p class="titulo" style="color: #c42634; font-size:22px;">AMAFORE</p>
 
-                                            <span style="font-size:28px;">
-                                           ACTIVACIONES  EN UNIVERSIDADES AMAFORE                                          Prepara tu Futuro  feat. El WESO.     <br></span><span style=" font-size:18px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
+                                            <span style="font-size:22px;">
+                                           ACTIVACIONES  EN UNIVERSIDADES AMAFORE  Prepara tu Futuro  feat. El WESO.     <br></span><span style=" font-size:16px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
 
                                             </span>
                                            
@@ -759,10 +759,10 @@
 
                                         <div class="columns-preview-description">
 
-                                             <p style="color: #c42634; font-size:28px;">AMAFORE</p>
+                                             <p  style="color: #c42634; font-size:22px;">AMAFORE</p>
 
-                                            <span style=" font-size:28px;">
-                                           ACTIVACIONES  EN UNIVERSIDADES AMAFORE                                          Prepara tu Futuro  feat. El WESO.     <br></span><span style=" font-size:18px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
+                                            <span style=" font-size:22px;">
+                                           ACTIVACIONES  EN UNIVERSIDADES AMAFORE    Prepara tu Futuro  feat. El WESO.     <br></span><span style=" font-size:1px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
 
                                             </span>
 
@@ -777,9 +777,9 @@
 
                                         <div class="columns-preview-description">
 
-                                              <p style="color: #c42634; font-size:28px;">AMAFORE</p>
+                                              <p style="color: #c42634; font-size:22px;">AMAFORE</p>
 
-                                            <span style="c font-size:28px;">
+                                            <span style="c font-size:22px;">
                                            ACTIVACIONES  EN UNIVERSIDADES AMAFORE                                          Prepara tu Futuro  feat. El WESO.     <br></span><span style="font-size:18px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
 
                                             </span>
@@ -798,10 +798,10 @@
 
                                         <div class="columns-preview-description">
 
-                                             <p style="color: #c42634; font-size:28px;">AMAFORE</p>
+                                             <p style="color: #c42634; font-size:22px;">AMAFORE</p>
 
-                                            <span style="font-size:28px;">
-                                           ACTIVACIONES  EN UNIVERSIDADES AMAFORE                                          Prepara tu Futuro  feat. El WESO.     <br></span><span style=" font-size:18px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
+                                            <span style="font-size:22px;">
+                                           ACTIVACIONES  EN UNIVERSIDADES AMAFORE  Prepara tu Futuro  feat. El WESO.     <br></span><span style=" font-size:16px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
 
                                             </span>
 
@@ -815,10 +815,10 @@
 
                                         <div class="columns-preview-description">
 
-                                              <p style="color: #c42634; font-size:28px;">AMAFORE</p>
+                                              <p style="color: #c42634; font-size:22px;">AMAFORE</p>
 
-                                            <span style=" font-size:28px;">
-                                           ACTIVACIONES  EN UNIVERSIDADES AMAFORE                                          Prepara tu Futuro  feat. El WESO.     <br></span><span style="font-size:18px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
+                                            <span style=" font-size:22px;">
+                                           ACTIVACIONES  EN UNIVERSIDADES AMAFORE                                          Prepara tu Futuro  feat. El WESO.     <br></span><span style="font-size:16px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
 
                                             </span>
                                         </div>
