--- a/html/our_projects/kelloggs.html
+++ b/html/our_projects/kelloggs.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+﻿h<!doctype html>
 
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 
@@ -640,7 +640,7 @@
                                            <p style="color: #c42634; font-size:28px;">KELLOGG´S</p>
 
                                             <span style=" font-size:28px;">
-                                               HOMBRE-PANTALLAS<br> ACTIVACIONES EN AUTOSERVICIO<br><br></span><span style=" font-size:18px;">Imaginando un mundo donde hacer el súper es divertido con Kellogg's.
+                                               HOMBRE-PANTALLAS<br> ACTIVACIONES EN AUTOSERVICIO<br><br></span><span style=" font-size:16px;">Imaginando un mundo donde hacer el súper es divertido con Kellogg's.
                                             </span>
 
                                            
