--- a/html/our_projects/projects.html
+++ b/html/our_projects/projects.html
@@ -500,7 +500,7 @@
 
                     <div id="module-columns-container">
 
-                    	<div class="li_nave"><img src="assets/media/cohete/normal.png" width="180"></div>
+                    	<div class="li_nave"><img src="assets/media/philoshopy/lestget_high_logo.png" width="180"></div>
 
                         <div class="columns-filter-holder">
 
@@ -582,7 +582,7 @@
 
                             </div>
 
-                              <div class="third-thumb-holder2 " data-id="interaction entretaiment">
+                              <div class="third-thumb-holder2 " data-id="interaction entretaiment impact">
 
                                <a href="#jack_daniels.html"> <div class="third-thumb-image2">
 
@@ -686,7 +686,7 @@
                             </div> 
                             <div class="third-thumb-holder2 " data-id="animation">
 
-                               <a href="#nestle.html"> <div class="third-thumb-image2">
+                               <a href="#purina_1.html"> <div class="third-thumb-image2">
 
                                     <img src="assets/media/our_projects/projects/nestle.jpg" class="opacity_0" style="margin-left:-63px;" width="120%" onload="animateThumb(this)" alt=""  />
 
