--- a/html/our_projects/purina_1.html
+++ b/html/our_projects/purina_1.html
@@ -713,10 +713,10 @@
 
                                         <div class="columns-preview-description">
 
-                                             <p style="color: #FFF; font-size:28px;">PURINA</p>
+                                             <p style="color: #c42634;  font-size:22px;">PURINA</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                              BRAND PLAN 2012<br><br><br></span><span style="color: #FFF; font-size:18px;">PURINA Greatest hits presenta: los mejores éxitos de la historia ahora amplificados en la compilación que cambiará el futuro.<br><br> 
+                                            <span style="font-size:20px;">
+                                              BRAND PLAN 2012<br><br><br></span><span style=" font-size:16px;">PURINA Greatest hits presenta: los mejores éxitos de la historia ahora amplificados en la compilación que cambiará el futuro.<br><br> 
 
                                             </span>
 
@@ -732,10 +732,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">PURINA</p>
+                                           <p style="color: #c42634;  font-size:22px;">PURINA</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                              BRAND PLAN 2012<br><br><br></span><span style="color: #FFF; font-size:18px;">PURINA Greatest hits presenta: los mejores éxitos de la historia ahora amplificados en la compilación que cambiará el futuro.<br><br> 
+                                            <span style="font-size:20px;">
+                                              BRAND PLAN 2012<br><br><br></span><span style="font-size:16px;">PURINA Greatest hits presenta: los mejores éxitos de la historia ahora amplificados en la compilación que cambiará el futuro.<br><br> 
 
                                             </span>
 
@@ -749,10 +749,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">PURINA</p>
+                                           <p sstyle="color: #c42634;  font-size:22px;">PURINA</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                              BRAND PLAN 2012<br><br><br></span><span style="color: #FFF; font-size:18px;">PURINA Greatest hits presenta: los mejores éxitos de la historia ahora amplificados en la compilación que cambiará el futuro.<br><br> 
+                                            <span style=" font-size:28px;">
+                                              BRAND PLAN 2012<br><br><br></span><span style=" font-size:16px;">PURINA Greatest hits presenta: los mejores éxitos de la historia ahora amplificados en la compilación que cambiará el futuro.<br><br> 
 
                                             </span>
 
@@ -766,10 +766,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">PURINA</p>
+                                           <p style="color: #c42634;  font-size:22px;">PURINA</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                              BRAND PLAN 2012<br><br><br></span><span style="color: #FFF; font-size:18px;">PURINA Greatest hits presenta: los mejores éxitos de la historia ahora amplificados en la compilación que cambiará el futuro.<br><br> 
+                                            <span style=" font-size:20px;">
+                                              BRAND PLAN 2012<br><br><br></span><span style=" font-size:16px;">PURINA Greatest hits presenta: los mejores éxitos de la historia ahora amplificados en la compilación que cambiará el futuro.<br><br> 
 
                                             </span>
 
