Ya tenemos las imágenes
Aquí ya están los botones de regresar en cada sección de los proyectos,
también se  ha cambiado el background de los proyectos.

--- a/html/about_us/about_us.html
+++ b/html/about_us/about_us.html
@@ -484,7 +484,7 @@
 
     <div id="module-container"><!-- start #module-container -->
 
-        <div id="module-background-holder" data-time="4">
+        <div id=" r" data-time="4">
 
         	<img src="assets/media/about_us/about_us/backgroundAboutUs.jpg" onload="animateModuleBackground(this)" class="module-background" id="module-background" alt="" />
 
