--- a/html/our_projects/descargas.html
+++ b/html/our_projects/descargas.html
@@ -544,7 +544,7 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1>LET'S GET HIGH with P.O.W. GIDEAS </h1>
+                                    <h1>LET'S GET HIGH with P.O.W.</h1>
 
                                     <h2>Wallpaper HD 1920x1080 </h2>
 
@@ -570,7 +570,7 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1>LET'S GET HIGH with P.O.W. GIDEAS  </h1>
+                                    <h1>GIDEAS</h1>
 
                                     <h2>Wallpaper HD 1920x1080  </h2>
 
@@ -596,7 +596,7 @@
 
                                 <div class="thumb-tag">
 
-                                         <h1>LET'S GET HIGH with P.O.W. GIDEAS </h1>
+                                         <h1>Power of Wow</h1>
 
                                     <h2>Wallpaper HD 1920x1080 </h2>
 
@@ -622,7 +622,7 @@
 
                                 <div class="thumb-tag">
 
-                                      <h1>P.O.W.</h1>
+                                      <h1>Power of Wow landing</h1>
 
                                     <h2>Launch Edition, 2012 </h2>
 
@@ -777,7 +777,7 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1>P.O.W. Special Edition, 2013 </h1>
+                                    <h1>P.O.W. Special Edition, 2012 </h1>
 
                                     <h2>Folder Icon </h2>
 
