--- a/html/our_projects/off.html
+++ b/html/our_projects/off.html
@@ -505,7 +505,9 @@
                             <div id="filter-buttons-holder">
 
                      
-                                <div class="filter-button selected" data-filter="*">Ver Todos</div>
+                                <!--<div class="filter-button selected" data-filter="*">Ver Todos</div>-->
+                                <a class="filter-button2" data-path-href="html/our_projects/" href="#projects.html">Regresar</a>
+
 
                             </div>
 
