--- a/html/our_projects/appleton.html
+++ b/html/our_projects/appleton.html
@@ -516,6 +516,8 @@
                                
 
                                 <div class="filter-button selected" data-filter="*">Ver Todos</div>
+                                <a class="filter-button2" data-path-href="html/our_projects/" href="#projects.html">Regresar</a>
+
 
                             </div>
 
