--- a/html/our_projects/appleton5.html
+++ b/html/our_projects/appleton5.html
@@ -516,6 +516,7 @@
                                
 
                                 <div class="filter-button selected" data-filter="*">Ver Todos</div>
+                                   <a class="filter-button2" data-path-href="html/our_projects/" href="#appleton.html">Regresar</a>
 
                             </div>
 
