--- a/html/our_projects/bonafont_agua_jugo.html
+++ b/html/our_projects/bonafont_agua_jugo.html
@@ -510,6 +510,7 @@
                                
 
                                 <div class="filter-button selected" data-filter="*">Ver Todos</div>
+                                <a class="filter-button2" data-path-href="html/our_projects/" href="#bonafont.html">Regresar</a>
 
                             </div>
 
