--- a/html/our_projects/jack_daniels1.html
+++ b/html/our_projects/jack_daniels1.html
@@ -515,6 +515,7 @@
                                
 
                                 <div class="filter-button selected" data-filter="*">Ver Todos</div>
+                                <a class="filter-button2" data-path-href="html/our_projects/" href="#jack_daniels.html">Regresar</a>
                               
 
                             </div>
