--- a/html/our_projects/jimador.html
+++ b/html/our_projects/jimador.html
@@ -508,7 +508,9 @@
 
                                
 
-                                <div class="filter-button selected" data-filter="*">Ver Todos</div>
+                                <!--<div class="filter-button selected" data-filter="*">Ver Todos</div>-->
+                                <a class="filter-button2" data-path-href="html/our_projects/" href="#projects.html">Regresar</a>
+
 
                             </div>
 
