--- a/html/our_projects/kinde_delice.html
+++ b/html/our_projects/kinde_delice.html
@@ -506,11 +506,13 @@
 
                                
 
-                                <div class="filter-button" data-filter="promotion">PROMOTION</div>
+                                <!--<div class="filter-button" data-filter="promotion">PROMOTION</div>
 
                                
 
-                                <div class="filter-button selected" data-filter="*">Ver Todos</div>
+                                <div class="filter-button selected" data-filter="*">Ver Todos</div>-->
+                                <a class="filter-button2" data-path-href="html/our_projects/" href="#projects.html">Regresar</a>
+
 
                             </div>
 
