--- a/html/our_projects/microsoft1.html
+++ b/html/our_projects/microsoft1.html
@@ -514,6 +514,7 @@
                                
 
                                 <div class="filter-button selected" data-filter="*">Ver Todos</div>
+                                   <a class="filter-button2" data-path-href="html/our_projects/" href="#microsoft.html">Regresar</a>
 
                             </div>
 
