--- a/html/our_projects/nestle.html
+++ b/html/our_projects/nestle.html
@@ -513,6 +513,8 @@
                                
 
                                 <div class="filter-button selected" data-filter="*">Ver Todos</div>
+                                <a class="filter-button2" data-path-href="html/our_projects/" href="#projects.html">Regresar</a>
+
 
                             </div>
 
