--- a/html/our_projects/projects.html
+++ b/html/our_projects/projects.html
@@ -488,7 +488,7 @@
 
             <!--<div id="module-background-solid1" class="opacity_0"></div> -->    
 
-            <img src="assets/backg/fondo-store.jpg" onload="animateModuleBackground(this)" class="module-background" id="module-background" alt="" />
+            <img src="assets/backg/Proyectos BTL.jpg" onload="animateModuleBackground(this)" class="module-background" id="module-background" alt="" />
 
         </div>
 
