--- a/html/our_projects/purina_1.html
+++ b/html/our_projects/purina_1.html
@@ -509,7 +509,8 @@
                            
                                
 
-                                <div class="filter-button selected" data-filter="*">Ver Todos</div>
+                                <!--<div class="filter-button selected" data-filter="*">Ver Todos</div>-->
+                                   <a class="filter-button2" data-path-href="html/our_projects/" href="#projects.html">Regresar</a>
 
                             </div>
 
