Cambios en estilos de estos archivos
Puros estilos

--- a/html/our_projects/productos.html
+++ b/html/our_projects/productos.html
@@ -709,9 +709,10 @@
 
                                         <div class="columns-preview-description">
 
-                                            <p>POW</p>
+                                            <p class="title">POW</p>
 
-                                            <span>P.O.W.  GIDEAS. 11th Anniversary Special Edition, 2013 </span>
+                                            <p style="text-decoration: none; font-size:18px;color: #FFF;font-family: CRegular;">P.O.W.  GIDEAS. 11th Anniversary Special Edition, 2013 </p>
+                                              <p ><br><a class="links"  href="mailto: store@gideas.com.mx">COMPREAME AHORA </a></p>
 
                                           <!--  <span>Sed sit amet leo sit amet nisl dignissim sagittis. Donec semper arcu augue. In eget erat nibh, vel venenatis metus. Donec fermentum arcu ac mauris viverra dictum. Duis venenatis turpis at nisl dictum pretium. Vestibulum sollicitudin nunc ut tortor sollicitudin bibendum. Proin convallis elit ac risus iaculis scelerisque. Nulla pellentesque mi dapibus ligula condimentum commodo porta metus fringilla. Nam venenatis est non ligula convallis vitae tempor eros tempus. </span>
 
@@ -731,10 +732,10 @@
 
                                         <div class="columns-preview-description">
 
-                                            <p>P.O.W.</p>
+                                            <p class="title">P.O.W.</p>
 
-                                            <span>P.O.W.   Launch Edition, 2012 </span>
-
+                                            <p style="text-decoration: none; font-size:18px;color: #FFF;font-family: CRegular;">P.O.W.   Launch Edition, 2012 </p><br>
+                                              <p ><br><a class="links"  href="mailto: store@gideas.com.mx">COMPREAME AHORA </a></p>
                                            
 
                                         </div>
@@ -753,8 +754,8 @@
 
                                             <p>P.O.W</p>
 
-                                            <span>P.O.W.   Launch Edition, 2012  </span>
-
+                                            <p style="text-decoration: none; font-size:18px;color: #FFF;font-family: CRegular;">P.O.W.   Launch Edition, 2012  </p><br>
+                                              <p ><br><a class="links"  href="mailto: store@gideas.com.mx">COMPREAME AHORA </a></p>
                                   
 
                                         </div>
@@ -773,7 +774,8 @@
 
                                                  <p>P.O.W</p>
 
-                                            <span>P.O.W.   Launch Edition, 2012  </span>
+                                            <p style="text-decoration: none; font-size:18px;color: #FFF;font-family: CRegular;">P.O.W.   Launch Edition, 2012  </p><br>
+                                        <p ><br><a class="links"  href="mailto: store@gideas.com.mx">COMPREAME AHORA </a></p>
                                         </div>
 
                                     </li>
