--- a/index.html
+++ b/index.html
@@ -772,13 +772,32 @@
 
                     </div>	
                  </div>
+                 <!--Begin "Comprarme ahora"-->
+                 <script>
+					function comprame(){
 
+						event.preventDefault();
+						document.location.href="mailto: store@gideas.com"
+					}
+					</script>
+
+
+
+                       <div class="menu-option-holder" data-module-type="" data-side="custom">
+
+                    <div id="menu-option-background" class="menu-option-background"> </div>
+
+                    <div class="menu-option-text" ><a OnClick="comprame();"  rel="mailto: store@gideas.com.mx">COMPRAME AHORA</a></div>
+                    
+
+                </div>
+                 <!-- End "Comprame ahora"-->
                    <!--Begin jobs-->
                  <div class="menu-option-holder" data-module-type="contact" data-side="custom">
 
                     <div id="menu-option-background" class="menu-option-background"> </div>
 
-                    <div id="menu-option-text" class="menu-option-text"><a href="#jobs.html" data-path-href="html/contact/">JOBS</a></div>
+                    <div id="menu-option-text" class="menu-option-text"><a  href="#jobs.html" data-path-href="html/contact/">JOBS</a></div>
 
                 </div>      
                 <!--Ends jobs-->
@@ -818,6 +837,7 @@
                      	
 
                     <option value="#people.html"> PEOPLE</option>
+
 
                     <option value="#jobs.html"> JOBS</option>    
 
