--- a/html/about_us/ethics.html
+++ b/html/about_us/ethics.html
@@ -259,10 +259,16 @@
 
         </div><!-- end #menu-container -->
         <div id="module-container"><!-- start #module-container -->
-            <div id="module-background-holder" style="background-color:#000; text-align:center">
-                <video width="70%"  controls>
+            <video src="../../../assets/videos/about_us/wearegideas.mp4" controls autoplay height="480" width="640">
+
+</video>
+            <div id="module-background-holder" style="background-color:#000;text-align:center;margin:auto; width:100%;height:100%;">
+                <video width="100%">
                     <source src="assets/videos/about_us/wearegideas.mp4" type="video/mp4">
+                    <source src="assets/videos/about_us/wearegideas.webm" type='video/webm' />
+                    <source src="assets/videos/about_us/wearegideas.ogv" type='video/ogg' />
                 </video>
+
             </div>  
         </div>
     </div>
@@ -270,7 +276,7 @@
     <!-- START LOADING CONTAINER AND ANIMATION-->
     <div id="load-container"></div>
     <div id="loading-animation">
-    	<img src="assets/loaders/loader.gif" width="16" height="11" alt="Synergy - loading animation"/>
+    	<img src="assets/loaders/loader.gif" width="16" height="11" alt="Cargando ..."/>
     </div>
     <!-- END LOADING CONTAINER AND ANIMATION--> 
 </body>
