--- a/html/about_us/landing.html
+++ b/html/about_us/landing.html
@@ -485,16 +485,16 @@
         </style>
         <div id="preloader_landing"></div>
         <div class="triangle1">
-            <div class="t1_container1 overclass"></div>
-            <div class="t1_container2"></div>
-            <div class="t1_container3"></div>
-            <div class="t1_container4"></div>
+            <div class="t1_container1"> <a href="#about_us.html"></a></div>
+            <div class="t1_container2"><a href="#about_us.html"></a></div>
+            <div class="t1_container3"><a href="#about_us.html"></a></div>
+            <div class="t1_container4"><a href="#about_us.html"></a></div>
         </div>
         <div class="triangle2">
             <a href="#ethics.html"><div class="t2_container1"><div class="t2_container11"></div></div></a>
         </div>
         <div class="triangle3">
-            <div class="t3_container1"></div>
+            <a href="#pow.html"><div class="t3_container1"></div></a>
         </div>
     </div><!-- end #module-container -->
 
