--- a/html/about_us/p3.html
+++ b/html/about_us/p3.html
@@ -527,6 +527,7 @@
                                     AMBASSADORS & INSIDERS PLANS<br />
                                     INTERACTIVE EVENTS  & BRAND EXPERIENCES<br /> 
                             </p>
+                            <p>"Conoce nuestros proyectos <a href="#projects.html" data-path-href="html/our_projects/">High Interaction</a>"</p>
                         </div>
 
                     </div>
