--- a/html/about_us/p4.html
+++ b/html/about_us/p4.html
@@ -527,7 +527,7 @@
                                     LOYALTY PROGRAMS<br />
                                     RELATIONSHIP MARKETING
                             </p>
-
+                            <p>"Conoce nuestros proyectos <a href="#projects.html" data-path-href="html/our_projects/">High Promotion</a>"</p>
                         </div>
 
                     </div>
