--- a/html/about_us/p5.html
+++ b/html/about_us/p5.html
@@ -522,6 +522,7 @@
                                     EXPO & CONVENTIONS<br />
                                     BOOKING & TALENT MANAGEMENT
                             </p>
+                            <p>"Conoce nuestros proyectos <a href="#projects.html" data-path-href="html/our_projects/">High Entertainment</a>"</p>
                         </div>
 
                     </div>
