--- a/html/about_us/p2.html
+++ b/html/about_us/p2.html
@@ -523,6 +523,8 @@
                                     AMBIENT MKTG<br />
                                     VIRAL MKTG<br />
                                     CONVENTIONAL MEDIA
+                            </p>
+                            <p>"Conoce nuestros proyectos <a href="#projects.html" data-path-href="html/our_projects/">High Impact</a>"</p>
                         </div>
 
                     </div>
