--- a/html/about_us/landing.html
+++ b/html/about_us/landing.html
@@ -485,7 +485,7 @@
         </style>
         <div id="preloader_landing"></div>
         <div class="triangle1">
-            <div class="t1_container1"> <a href="#about_us.html"></a></div>
+            <div class="t1_container1"><a href="#about_us.html"></a></div>
             <div class="t1_container2"><a href="#about_us.html"></a></div>
             <div class="t1_container3"><a href="#about_us.html"></a></div>
             <div class="t1_container4"><a href="#about_us.html"></a></div>
@@ -494,7 +494,7 @@
             <a href="#ethics.html"><div class="t2_container1"><div class="t2_container11"></div></div></a>
         </div>
         <div class="triangle3">
-            <a href="#pow.html"><div class="t3_container1"></div></a>
+            <div class="t3_container1"><a href="#pow.html" style="width: 100%; height: 102%; margin: 0px 0%; position: absolute; padding: 10%; top: 4%;"></a></div>
         </div>
     </div><!-- end #module-container -->
 
