Cambios de posicion
cambios en el index de posicion y otros cambios sin importancia

--- a/html/our_projects/amafore.html
+++ b/html/our_projects/amafore.html
@@ -546,7 +546,7 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1>ACTIVACIONES  EN UNIVERSIDADES AMAFORE</h1>
+                                    <h1>ACTIVACIONES  EN UNIVERSIDADES</h1>
 
                                     <h2>NO EXISTE UNA EDAD para pensar al futuro.</h2>
 
