--- a/html/our_projects/amafore1.html
+++ b/html/our_projects/amafore1.html
@@ -545,7 +545,7 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1>ACTIVACIONES  EN UNIVERSIDADES AMAFORE</h1>
+                                    <h1>ACTIVACIONES  EN UNIVERSIDADES</h1>
 
                                     <h2>NO EXISTE UNA EDAD para pensar al futuro.</h2>
 
@@ -570,7 +570,7 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1>ACTIVACIONES  EN UNIVERSIDADES AMAFORE</h1>
+                                    <h1>ACTIVACIONES  EN UNIVERSIDADES</h1>
 
                                     <h2>NO EXISTE UNA EDAD para pensar al futuro.</h2>
 
@@ -595,7 +595,7 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1>ACTIVACIONES  EN UNIVERSIDADES AMAFORE</h1>
+                                    <h1>ACTIVACIONES  EN UNIVERSIDADES</h1>
 
                                     <h2>NO EXISTE UNA EDAD para pensar al futuro.</h2>
 
@@ -620,7 +620,7 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1>ACTIVACIONES  EN UNIVERSIDADES AMAFORE</h1>
+                                    <h1>ACTIVACIONES  EN UNIVERSIDADES</h1>
 
                                     <h2>NO EXISTE UNA EDAD para pensar al futuro.</h2>
 
@@ -645,7 +645,7 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1>ACTIVACIONES  EN UNIVERSIDADES AMAFORE</h1>
+                                    <h1>ACTIVACIONES  EN UNIVERSIDADES</h1>
 
                                     <h2>NO EXISTE UNA EDAD para pensar al futuro.</h2>
 
@@ -745,7 +745,7 @@
                                              <p class="titulo" style="color: #c42634; font-size:22px;">AMAFORE</p>
 
                                             <span style="font-size:22px;">
-                                           ACTIVACIONES  EN UNIVERSIDADES AMAFORE  Prepara tu Futuro  feat. El WESO.     <br></span><span style=" font-size:16px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
+                                           ACTIVACIONES  EN UNIVERSIDADES  Prepara tu Futuro  feat. El WESO.     <br></span><span style=" font-size:16px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
 
                                             </span>
                                            
@@ -763,7 +763,7 @@
                                              <p  style="color: #c42634; font-size:22px;">AMAFORE</p>
 
                                             <span style=" font-size:22px;">
-                                           ACTIVACIONES  EN UNIVERSIDADES AMAFORE    Prepara tu Futuro  feat. El WESO.     <br></span><span style=" font-size:1px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
+                                           ACTIVACIONES  EN UNIVERSIDADES    Prepara tu Futuro  feat. El WESO.     <br></span><span style=" font-size:1px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
 
                                             </span>
 
@@ -781,7 +781,7 @@
                                               <p style="color: #c42634; font-size:22px;">AMAFORE</p>
 
                                             <span style="c font-size:22px;">
-                                           ACTIVACIONES  EN UNIVERSIDADES AMAFORE                                          Prepara tu Futuro  feat. El WESO.     <br></span><span style="font-size:18px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
+                                           ACTIVACIONES  EN UNIVERSIDADES                                          Prepara tu Futuro  feat. El WESO.     <br></span><span style="font-size:18px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
 
                                             </span>
 
@@ -802,7 +802,7 @@
                                              <p style="color: #c42634; font-size:22px;">AMAFORE</p>
 
                                             <span style="font-size:22px;">
-                                           ACTIVACIONES  EN UNIVERSIDADES AMAFORE  Prepara tu Futuro  feat. El WESO.     <br></span><span style=" font-size:16px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
+                                           ACTIVACIONES  EN UNIVERSIDADES  Prepara tu Futuro  feat. El WESO.     <br></span><span style=" font-size:16px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
 
                                             </span>
 
@@ -819,7 +819,7 @@
                                               <p style="color: #c42634; font-size:22px;">AMAFORE</p>
 
                                             <span style=" font-size:22px;">
-                                           ACTIVACIONES  EN UNIVERSIDADES AMAFORE                                          Prepara tu Futuro  feat. El WESO.     <br></span><span style="font-size:16px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
+                                           ACTIVACIONES  EN UNIVERSIDADES                                          Prepara tu Futuro  feat. El WESO.     <br></span><span style="font-size:16px;">NO EXISTE UNA EDAD                                      para pensar al futuro.<br><br> 
 
                                             </span>
                                         </div>
