--- a/html/portfolio/people.html
+++ b/html/portfolio/people.html
@@ -695,7 +695,7 @@
 
                             <div class="zoom-gallery"></div>
 
-                            <div class="item-title"><p>Picci</p></div>
+                            <div class="item-title"><p>Lola</p></div>
 
                         </div>                   
 
@@ -865,7 +865,7 @@
                         
                         <div class="full-width-info-holder-desc">
 
-                           <p>PICCI</p>
+                           <p>LOLA</p>
 
                             <div class="custom-separator"></div>
 
